--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,14 +13,16 @@ jobs:
       matrix:
         # test against several OSes:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        # test against several Java versions:
+        java: [ 8, 11 ]
 
-    name: Build with Java on ${{ matrix.os }}
+    name: Build with Java ${{ matrix.java }} on ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 8
+    - name: Set up JDK ${{ matrix.java }}
       uses: actions/setup-java@v1
       with:
-        java-version: 8
+        java-version: ${{ matrix.java }}
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
