--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,20 +13,22 @@ jobs:
       matrix:
         # test against several OSes:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        # test against several Java versions:
+        java: [ 17, 21 ]
 
-    name: Build with Java on ${{ matrix.os }}
+    name: Build with Java ${{ matrix.java }} on ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK
+    - name: Set up JDK ${{ matrix.java }}
       uses: actions/setup-java@v4
       with:
-        java-version: 17
+        java-version: ${{ matrix.java }}
         distribution: 'temurin'
     - name: Cache Maven packages
       uses: actions/cache@v4
       with:
         path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml', '**/*.yml') }}
+        key: ${{ runner.os }}-m2-jdk${{ matrix.java }}-${{ hashFiles('**/pom.xml', '**/*.yml') }}
         restore-keys: ${{ runner.os }}-m2-
     - name: Build with Maven
       run: mvn -f com.examples.myproject/pom.xml clean verify
