--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,6 +15,12 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         # test against several Java versions:
         java: [ 17, 21 ]
+        # excludes JDK 11 on macOS and Windows
+        exclude:
+        - os: macos-latest
+          java: 21
+        - os: windows-latest
+          java: 21
 
     name: Build with Java ${{ matrix.java }} on ${{ matrix.os }}
     steps:
