--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,5 +29,8 @@ jobs:
         key: ${{ runner.os }}-m2-jdk${{ matrix.java }}-${{ hashFiles('**/pom.xml', '**/*.yml') }}
         restore-keys: ${{ runner.os }}-m2-
     - name: Build with Maven
-      run: mvn -f com.examples.myproject/pom.xml clean verify
+      run: >
+        mvn -f com.examples.myproject/pom.xml
+        clean verify
+        surefire-report:report-only site:site -DgenerateReports=false
 
