--- a/com.examples.myproject/pom.xml
+++ b/com.examples.myproject/pom.xml
@@ -22,4 +22,15 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-surefire-report-plugin</artifactId>
+					<version>3.5.2</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
