--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,10 +28,12 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2-
     - name: Build with Maven
+      run: mvn -f com.examples.myproject/pom.xml clean verify
+    - name: Generate JUnit Report
       run: >
         mvn -f com.examples.myproject/pom.xml
-        clean verify
         surefire-report:report-only site:site -DgenerateReports=false
+      if: ${{ always() }}
     - name: Archive JUnit Report
       uses: actions/upload-artifact@v2
       with:
