--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,9 +10,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
+      # test against several Java versions:
       matrix:
-        # test against several Java versions:
-        java: [ 8, 11 ]
+        include:
+          - java: 8
+            additional-maven-args: "-Pjacoco"
+          - java: 11
 
     name: Build with Java ${{ matrix.java }} on Linux
     steps:
@@ -28,7 +31,9 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2-
     - name: Build with Maven
-      run: mvn -f com.examples.myproject/pom.xml clean verify
+      run: >
+        mvn -f com.examples.myproject/pom.xml
+        clean verify ${{ matrix.additional-maven-args }}
     - name: Generate JUnit Report
       run: >
         mvn -f com.examples.myproject/pom.xml
