--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,6 +36,7 @@ jobs:
         clean verify ${{ matrix.additional-maven-args }}
       env: 
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+        CI_PULL_REQUEST: ${{ github.event.pull_request.number }}
     - name: Generate JUnit Report
       run: >
         mvn -f com.examples.myproject/pom.xml
