--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,6 +34,7 @@ jobs:
       run: >
         mvn -f com.examples.myproject/pom.xml
         clean verify ${{ matrix.additional-maven-args }}
+        -DpullRequest=$CI_PULL_REQUEST
       env: 
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
         CI_PULL_REQUEST: ${{ github.event.pull_request.number }}
