--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,7 +14,11 @@ jobs:
       matrix:
         include:
           - java: 8
-            additional-maven-args: "-Pjacoco -DrepoToken=$COVERALLS_REPO_TOKEN coveralls:report"
+            additional-maven-args: >
+              -Pjacoco
+              -DrepoToken=$COVERALLS_REPO_TOKEN
+              -DpullRequest=$CI_PULL_REQUEST
+              coveralls:report
           - java: 11
 
     name: Build with Java ${{ matrix.java }} on Linux
@@ -34,7 +38,6 @@ jobs:
       run: >
         mvn -f com.examples.myproject/pom.xml
         clean verify ${{ matrix.additional-maven-args }}
-        -DpullRequest=$CI_PULL_REQUEST
       env: 
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
         CI_PULL_REQUEST: ${{ github.event.pull_request.number }}
