--- a/.github/workflows/environments-experiments.yml
+++ b/.github/workflows/environments-experiments.yml
@@ -10,6 +10,8 @@ jobs:
     name: Build with the default Java
     steps:
     - uses: actions/checkout@v2
+    - name: Show Java version
+      run: java -version
     - name: Build with Maven
       run: mvn -f com.examples.myproject/pom.xml clean verify
 
