--- a/.github/workflows/pr-windows-mac.yml
+++ b/.github/workflows/pr-windows-mac.yml
@@ -20,5 +20,5 @@ jobs:
       with:
         java-version: 8
     - name: Build with Maven
-      run: mvn -f com.examples.myproject/pom.xml clean verify
+      run: mvn -f com.examples.myproject/pom.xml verify
 
