--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Build with Maven
       run: >
         mvn -f com.examples.myproject/pom.xml
-        clean verify ${{ matrix.additional-maven-args }}
+        verify ${{ matrix.additional-maven-args }}
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
     - name: Generate JUnit Report
