--- a/.github/workflows/pr-windows-mac.yml
+++ b/.github/workflows/pr-windows-mac.yml
@@ -21,5 +21,5 @@ jobs:
         java-version: 17
         distribution: 'temurin'
     - name: Build with Maven
-      run: mvn -f com.examples.myproject/pom.xml clean verify
+      run: mvn -f com.examples.myproject/pom.xml verify
 
