--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,14 +33,14 @@ jobs:
         restore-keys: ${{ runner.os }}-m2-
     - name: Build with Maven
       run: >
-        mvn -f com.examples.myproject/pom.xml
-        verify ${{ matrix.additional-maven-args }}
+        mvn verify ${{ matrix.additional-maven-args }}
+      working-directory: com.examples.myproject
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
     - name: Generate JUnit Report
       run: >
-        mvn -f com.examples.myproject/pom.xml
-        surefire-report:report-only
+        mvn surefire-report:report-only
+      working-directory: com.examples.myproject
       if: ${{ always() }}
     - name: Archive JUnit Report
       uses: actions/upload-artifact@v4
