--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      workdir: com.examples.myproject
     strategy:
       # test against several Java versions:
       matrix:
@@ -34,13 +36,13 @@ jobs:
     - name: Build with Maven
       run: >
         mvn verify ${{ matrix.additional-maven-args }}
-      working-directory: com.examples.myproject
+      working-directory: ${{ env.workdir }}
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
     - name: Generate JUnit Report
       run: >
         mvn surefire-report:report-only
-      working-directory: com.examples.myproject
+      working-directory: ${{ env.workdir }}
       if: ${{ always() }}
     - name: Archive JUnit Report
       uses: actions/upload-artifact@v4
