--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,10 +17,9 @@ jobs:
         include:
           - java: 8
             additional-maven-args: >
-              -Pjacoco
+              -Pcoveralls
               -DrepoToken=$COVERALLS_REPO_TOKEN
               -DpullRequest=${{ github.event.pull_request.number }}
-              coveralls:report
           - java: 11
 
     name: Build with Java ${{ matrix.java }} on Linux
