--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         include:
           - java: 17
-            additional-maven-args: "-Pjacoco"
+            additional-maven-args: "-Pjacoco coveralls:report"
           - java: 21
 
     name: Build with Java ${{ matrix.java }} on Linux
@@ -35,6 +35,8 @@ jobs:
       run: >
         mvn -f com.examples.myproject/pom.xml
         clean verify ${{ matrix.additional-maven-args }}
+      env:
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
     - name: Generate JUnit Report
       run: >
         mvn -f com.examples.myproject/pom.xml
