--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,13 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     env:
       workdir: com.examples.myproject
+      COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
     strategy:
       # test against several Java versions:
       matrix:
-        include:
-          - java: 17
-            additional-maven-args: "-Pcoveralls"
-          - java: 21
+        java: [17, 21]
 
     name: Build with Java ${{ matrix.java }} on Linux
     steps:
@@ -33,12 +31,14 @@ jobs:
         path: ~/.m2
         key: ${{ runner.os }}-m2-jdk${{ matrix.java }}-${{ hashFiles('**/pom.xml', '**/*.yml') }}
         restore-keys: ${{ runner.os }}-m2-
+    - name: Set Maven Additional Options
+      run: |
+        echo "ADDITIONAL_MAVEN_OPTIONS=-Pcoveralls" >> $GITHUB_ENV
+      if: ${{ env.COVERALLS_REPO_TOKEN && matrix.java == 17 }}
     - name: Build with Maven
       run: >
-        mvn verify ${{ matrix.additional-maven-args }}
+        mvn verify $ADDITIONAL_MAVEN_OPTIONS
       working-directory: ${{ env.workdir }}
-      env:
-        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
     - name: Generate JUnit Report
       run: >
         mvn surefire-report:report-only
